{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b2511ab0-aa87-4ab3-83b5-2b1fecad1f1d",
            "actions": [
                {
                    "name": "Reset player position",
                    "type": "Button",
                    "id": "6a1661a1-c09c-4099-80c2-2e3fe6ccab65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "44aef404-b106-4ef4-88ef-6d55b52cc457",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelShoot",
                    "type": "Button",
                    "id": "7025d8d3-4390-4d3f-a0e5-5b5119dbba5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateCameraRotate",
                    "type": "Button",
                    "id": "bfc3dc63-d0bd-4ac9-b9b0-beadb07c7c66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab5a3a5a-53ee-43ed-aef4-34101b4daf92",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset player position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8989b7f9-0654-427f-b419-16233aa8998d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "774604dc-75c1-4a7b-8b10-833cb445e3c3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ef177d5-e9ea-40bf-b80d-b2aa64df0ba6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateCameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RotateCamera",
            "id": "d1fd7397-f79a-47fc-97e4-f499727b3eeb",
            "actions": [
                {
                    "name": "RotatingCamera",
                    "type": "Value",
                    "id": "5ccdab85-c42c-413e-87e1-2bd07078c8b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0206800f-06d8-48c6-9d3b-56f2f32c57a7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatingCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WaitingForInput",
            "id": "e61c0449-a426-4e90-a188-90580ddbef95",
            "actions": [
                {
                    "name": "Any key pressed",
                    "type": "Button",
                    "id": "00a48d80-39bd-485c-bcee-e539e59d794f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f0157b1-e299-4566-a55c-5020cc388fc2",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Any key pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}